src/style.css
:root {
    --primary-color: #74C69D;
    --secondary-color: #FFF;
    --dark-color: #212529;
    --primary-color-100: var(--primary-color);
    --primary-color-75: #74c69dc0;
    --secondary-color-100: var(--secondary-color);
    --secondary-color-75: #FFFFFFc0;
    --dark-color-100: var(--dark-color);

    font-family: 'Work Sans', Arial, sans-serif;
    font-size: 16px;
    line-height: 125%;
}

body {
    margin: 0;
}

.site-content {
    width: 1180px;
    margin: auto;
}

h1 {
    font-family: 'Crimson Text';
    font-size: 2.5rem;
    font-weight: 700;
    line-height: 125%;
    margin: 16px 0;
}

.label {
    font-weight: bold;
    letter-spacing: 5px;
    text-transform: uppercase;
    color: var(--primary-color);
}

.sub-heading {
    font-size: 1.25rem;
    line-height: 125%;
}

.secondary-button {
    background-color: var(--dark-color);
    padding: 13px 30px 10px;
    color: var(--secondary-color);
    font-family: inherit;
    border-radius: 5px;
    border: 0;
}

.header-section,
.footer-section {
    padding: 35px 0 38px;
    background-color: #74C69D;
}

.header-section {
    margin-bottom: 30px;
}

.header-section-content,
.footer-section-container {
    color: var(--secondary-color);
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.logo-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 190px;
}

.logo {
    font-size: 2.5rem;
}

.burger-menu {
    display: none;
}

.nav-container {
    width: 390px;
}

.nav-container ul {
    display: flex;
    list-style: none;
    justify-content: space-between;
}

.nav-container a {
    text-decoration: none;
    color: inherit;
}

.content-header-section {
    display: flex;
    justify-content: center;
    margin-bottom: 82px;
}

.content-header-container {
    text-align: center;
    width: 410px;
}

.portfolio-section {
    width: 100%;
    display: grid;
    grid-template-columns: 570fr 555fr;
    margin-bottom: 64px;
    gap: 55px;
}

.more-section {
    text-align: center;
    margin-bottom: 100px;
}



article img {
    width: 100%;
}

@media (max-width: 1200px) {
    .site-content {
        width: 900px;
    }
}

@media (max-width: 1024px) {
    .site-content {
        width: 700px;
    }
}

@media (max-width: 768px) {
    .site-content {
        width: 500px;
    }

    /* Switch navigation to burger menu */
    .header-section-content nav {
        display: none;
    }

    .burger-menu {
        display: inline;
    }

    .logo-container {
        width: 130px;
    }

    .logo-container svg {
        width: 45px;
    }
    
    .logo {
        font-size: 1.9rem;
    }

    .portfolio-section {
        grid-template-columns: 1fr;
        row-gap: 55px;
    } 

    .footer-section-container {
        flex-direction: column;
        align-items: center;
    }
}

@media (max-width: 568px) {
    .site-content {
        width: 320px;
    }

    /* lower article container width */
    article {
        width: 320px;
    }

    footer .sub-heading {
        font-size: 1rem;
    }
}

